fixing spacing and working on navbar anchor buttons

--- a/src/index.css
+++ b/src/index.css
@@ -29,8 +29,8 @@
 
   text-align: center;
   font-family: 'Inter', sans-serif;
-
-  margin-bottom: 7vh;
+  margin-top: 17vh;
+  margin-bottom: 27vh;
 }
 
 
